--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,10 @@ description: >- # used by seo meta and the atom feed
 url: ""
 
 github:
-  username: github_username # change to your github username
+  username: kabergeorge # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: kabergeorge # change to your twitter username
 
 social:
   # Change to your full name.
