--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: " https://kabergeorge.github.io/"
 
 github:
   username: kabergeorge # change to your github username
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn: "https://twitter.com/kabergeorge/photo"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/commons/avatar.jpg"
+avatar: "/https://twitter.com/kabergeorge/photo"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
