--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,10 @@ timezone: Europe/Athens
 
 title: George Kaberoglou # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: Notion & Fitness # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  George Kaberoglou | Notion Templates | Fitness & Productivity | 2023
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: " https://kabergeorge.github.io/"
