--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ theme_mode: # [light|dark]
 img_cdn: "https://twitter.com/kabergeorge/photo"
 
 # the avatar on sidebar, support local or CORS resources
-avatar: "/https://twitter.com/kabergeorge/photo"
+avatar: "\assets\img\profilepic"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
