--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: Europe/Athens
 
 title: George Kaberoglou # the main title
 
-tagline: Notion & Fitness # it will display as the sub-title
+tagline: Notion | Fitness | Productivity # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   George Kaberoglou | Notion Templates | Fitness & Productivity | 2023
