--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -5,7 +5,7 @@
 
 - type: instagram
   icon: "fab fa-instagram"
-  url: 'https://www.instagram.com/kaber_george/'
+  url: 'https://www.instagram.com/kaberfitness/'
 
 - type: twitter
   icon: "fab fa-twitter"
