--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ github:
   username: kabergeorge # change to your github username
 
 twitter:
-  username: kabergeorge # change to your twitter username
+  username: kaberfitness # change to your twitter username
 
 social:
   # Change to your full name.
@@ -41,7 +41,7 @@ social:
   email: kabergeorge@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/kabergeorge # change to your twitter homepage
+    - https://twitter.com/kaberfitness # change to your twitter homepage
     - https://github.com/kabergeorge # change to your github homepage
     # Uncomment below to add more social links
     - https://www.facebook.com/kabergeorge
@@ -52,12 +52,12 @@ google_site_verification: # fill in to your verification string
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 
-google_analytics:
-  id: # fill in your Google Analytics ID
-  # Google Analytics pageviews report settings
-  pv:
-    proxy_endpoint: # fill in the Google Analytics superProxy endpoint of Google App Engine
-    cache_path: # the local PV cache data, friendly to visitors from GFW region
+#google_analytics:
+#  id: # fill in your Google Analytics ID
+#  # Google Analytics pageviews report settings
+#  pv:
+#    proxy_endpoint: # fill in the Google Analytics superProxy endpoint of Google App Engine
+#    cache_path: # the local PV cache data, friendly to visitors from GFW region
 
 # Prefer color scheme setting.
 #
